[package]
name = "osma-server"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
dotenv = "0.15.0"

actix-web = "4"
actix-rt = "2.7.0"
actix-cors = "0.6.1" 
actix-web-grants = "4.0.1"
actix-web-httpauth = "0.8"

mongodb = { version = "2.1.0"}
bson = "2.1.0"
futures = "0.3.21"

jsonwebtoken = "8"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1"

sha3 = "0.10.1"
chrono = "0.4"